<resources>
    <string name="app_name">NewsAppFinal</string>
    <string name="no_internet_connection">No internet connection, please check connection, refresh and try again</string>
    <string name="no_news">No data to display</string>
    <string name="no_network_available">no network available</string>
    <string name="please_check_network_settings_and_refresh">Please check network settings and refresh</string>
    <string name="text_Ipsum_Loren">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="text">Authors Name</string>
    <string name="read_more"><![CDATA[Read More >]]></string>
    <string name="text_date">Date Published</string>
    <string name="text_time">3:00 PM</string>
    <string name="text_section">Section Name</string>


    <!-- Preference Settings -->
    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">News Settings</string>

    <!-- Strings For Order-By Preference [CHAR LIMIT=30] -->
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>

    <!-- Label for order-by most recent option [CHAR LIMIT=20] -->
    <string name="settings_order_by_most_recent_label">Most Recent</string>
    <string name="settings_order_by_most_recent_value" translatable="false">time</string>
    <string name="settings_order_by_most_relevance">Relevance</string>



    <!-- -->
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_article_value</string>
    <string name="settings_min_article_label">Minimum Number of Articles</string>
    <string name="settings_min_article_key" translatable="false">min_articles</string>
    <string name="settings_min_article_default" translatable="false">0</string>

    Label for order-by keyword option [CHAR LIMIT=20]
    <string name="settings_order_by_article_label">Newest</string>
    <string name="settings_order_by_article_value" translatable="false">article</string>
    <string name="settings_order_by_keyword_value_user">keyword</string>
    <string name="settings_order_by_keyword_key">keyword</string>
    <string name="settings_order_by_keyword_label">Search by Keyword</string>

</resources>
