<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:title="@string/settings_title">

    <!--<EditTextPreference-->
        <!--android:defaultValue="@string/settings_min_article_default"-->
        <!--android:inputType="numberDecimal"-->
        <!--android:key="@string/settings_min_article_key"-->
        <!--android:selectAllOnFocus="true"-->
        <!--android:title="@string/settings_min_article_label" />-->

    <EditTextPreference
        android:defaultValue="@string/settings_order_by_default"
        android:inputType="textNoSuggestions"
        android:key="@string/settings_order_by_keyword_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_order_by_keyword_label" />

    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label" />

</PreferenceScreen>