<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.newsappfinal.NewsActivity"
    android:layout_height="wrap_content" android:layout_width="wrap_content">

    <item
        android:id="@+id/action_settings"
        android:title="@string/settings_menu_item"
        android:icon="@drawable/ic_filter"
        android:orderInCategory="1"
        app:showAsAction="ifRoom" />

    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label" />
</menu>