<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginBottom="@dimen/marginBottom"
    android:layout_marginTop="@dimen/marginTop"
    android:padding="@dimen/padding"
    android:orientation="vertical">
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="3"
        android:textSize="@dimen/textSize_18"
        android:layout_marginTop="@dimen/marginTop_4"
        android:textColor="@color/colorPrimaryDark"
        tools:text="@string/text_Ipsum_Loren"/>
    <TextView
        android:id="@+id/author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginLeft_4"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/textSize_22"
        tools:text="@string/text"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/marginLeft_8">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="@dimen/marginRight_8"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/textSize_181"
            android:text="@string/read_more"
            android:layout_alignParentRight="true" />


        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/marginTop21"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/textSize17"
            tools:text="@string/text_date" />

        <TextView
            android:id="@+id/time"
            android:layout_width="@dimen/layout_width"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="end"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/textColor"
            tools:text="@string/text_time" />

        <TextView
            android:id="@+id/section"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="end"
            android:layout_marginStart="@dimen/marginStart"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/textSize_17"
            tools:text="@string/text_section"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/marginLeft" />



    </RelativeLayout>

</LinearLayout>



